# panasonic-smart-laundry

./: .gitignore  README.md  auth.py  hacs.json  machines.csv  pyproject.toml
.github/workflows/: tests.yml
custom_components/panasonic_smart_laundry/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  labels.py  manifest.json  sensor.py  state.py
custom_components/panasonic_smart_laundry/labels/: NA-F8AKE3.json  NA-F8AKE5.json  NA-F9AKE3.json  NA-F9AKE4.json  NA-FA10K2.json  NA-FA10K5.json  NA-FA11K1.json  NA-FA11K2.json  NA-FA11K5.json  NA-FA12V1.json  NA-FA12V2.json  NA-FA12V3.json  NA-FA12V5.json  NA-FA12V6.json  NA-FA9K2.json  NA-FA9K3.json  NA-FW10K1.json  NA-FW10K2.json  NA-LX127A.json  NA-LX127B.json  NA-LX127C.json  NA-LX127D.json  NA-LX127E.json  NA-LX129A.json  NA-LX129B.json  NA-LX129C.json  NA-LX129D.json  NA-LX129E.json  NA-SD10UA.json  NA-SD10UB.json  NA-VG1400.json  NA-VG2200.json  NA-VG2300.json  NA-VG2400.json  NA-VG2500.json  NA-VG2600.json  NA-VG2700.json  NA-VG2800.json  NA-VG2900.json  NA-VX900A.json  (+3 more)
custom_components/panasonic_smart_laundry/translations/: en.json  ja.json
tests/: conftest.py  test_api.py  test_parsing.py
tests/fixtures/: device_info_na_vx9800.json  status_econavi.json
