[project]
name = "panasonic-smart-laundry"
version = "0.3.1"
description = "Home Assistant integration for Panasonic Smart Laundry"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "aiohttp>=3.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "custom_components"]
